-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.4.0 RC
-
None
-
f17d7a124f0fa817a7e1a2dda6f48098432c0dc0
See comment in QTBUG-42115:
"
Mostly irrelevant qWarnings is IMO a problem when developing, as we use QT_FATAL_WARNINGS to catch issues early (or just to trigger a stacktrace at the correct place), but that is a useless tactic when it triggers already at startup.
Is it really ok to print warnings in what Qt appear to otherwise consider a normal environment? And if yes, is there some way to suppress these specific qWarnings?
"
- is duplicated by
-
QTBUG-43648 QSslSocket: cannot resolve SSLv2_server_method
-
- Closed
-
- resulted from
-
QTBUG-42115 Update openssl on build machines to newer version (Ubuntu)
-
- Closed
-
| For Gerrit Dashboard: QTBUG-43173 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 101723,5 | Use categorized logging for ssl code | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |